fixed readability on sign up page

--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -7,6 +7,7 @@
     background-color: #0a0f18;
     color: #ffffff;
   }
+  */
 
 .signup-form h1 {
   font-size: 2rem;
@@ -25,8 +26,10 @@
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 255, 255, 0.3);
   backdrop-filter: blur(10px);
+  color: aqua;
 }
 
+/*
 .signup-form div {
   margin-bottom: 15px;
 }
@@ -86,3 +89,6 @@
   button:last-of-type:hover {
     background-color: #8b0000;
   } */
+  .signin-form {
+    color: white;
+  }
